add_library(crypto)
target_link_libraries(crypto PRIVATE openssl_defaults)
target_compile_definitions(crypto PRIVATE
  AES_ASM
  BSAES_ASM
  CMLL_ASM
  ECP_NISTZ256_ASM
  GHASH_ASM
  KECCAK1600_ASM
  MD5_ASM
  OPENSSL_BN_ASM_GF2m
  OPENSSL_BN_ASM_MONT
  OPENSSL_BN_ASM_MONT5
  OPENSSL_CPUID_OBJ
  OPENSSL_IA32_SSE2
  OPENSSL_USE_APPLINK
  POLY1305_ASM
  SHA1_ASM
  SHA256_ASM
  SHA512_ASM
  VPAES_ASM
  WHIRLPOOL_ASM
  X25519_ASM)

find_package(Perl REQUIRED)
add_library(crypto_asm OBJECT)

function(crypto_gen_asm_single INPUT_PATH OUTPUT_PATH)
  add_custom_command(OUTPUT "${OUTPUT_PATH}.asm"
    COMMAND ${CMAKE_COMMAND} -E env ASM=nasm -- ${PERL_EXECUTABLE}
    "${INPUT_PATH}.pl" auto "${OUTPUT_PATH}.asm")
  target_sources(crypto_asm PRIVATE "${OUTPUT_PATH}.asm")
endfunction()

function(crypto_gen_asm RELATIVE_TO_DIR)
  foreach(ASM_NAME IN LISTS ARGN)
    crypto_gen_asm_single("${RELATIVE_TO_DIR}/${ASM_NAME}" "${ASM_NAME}")
  endforeach()
endfunction()

crypto_gen_asm_single("${CMAKE_CURRENT_LIST_DIR}/sha/asm/sha512-x86_64"
  "sha/asm/sha256-x86_64")

crypto_gen_asm("${CMAKE_CURRENT_LIST_DIR}"
  aes/asm/aes-x86_64
  aes/asm/aesni-mb-x86_64
  aes/asm/aesni-sha1-x86_64
  aes/asm/aesni-sha256-x86_64
  aes/asm/aesni-x86_64
  aes/asm/bsaes-x86_64
  aes/asm/vpaes-x86_64
  bn/asm/rsaz-2k-avx512
  bn/asm/rsaz-3k-avx512
  bn/asm/rsaz-4k-avx512
  bn/asm/rsaz-avx2
  bn/asm/rsaz-x86_64
  bn/asm/x86_64-gf2m
  bn/asm/x86_64-mont
  bn/asm/x86_64-mont5
  camellia/asm/cmll-x86_64
  chacha/asm/chacha-x86_64
  ec/asm/ecp_nistz256-x86_64
  ec/asm/x25519-x86_64
  x86_64cpuid
  md5/asm/md5-x86_64
  modes/asm/aes-gcm-avx512
  modes/asm/aesni-gcm-x86_64
  modes/asm/ghash-x86_64
  poly1305/asm/poly1305-x86_64
  rc4/asm/rc4-md5-x86_64
  rc4/asm/rc4-x86_64
  sha/asm/keccak1600-x86_64
  sha/asm/sha1-mb-x86_64
  sha/asm/sha1-x86_64
  sha/asm/sha256-mb-x86_64
  sha/asm/sha512-x86_64
  whrlpool/asm/wp-x86_64)

crypto_gen_asm("${OpenSSL_SOURCE_DIR}" ms/uplink-x86_64)

target_link_libraries(crypto PRIVATE crypto_asm default common)

target_sources(crypto PRIVATE
  aes/aes_cfb.c
  aes/aes_ecb.c
  aes/aes_ige.c
  aes/aes_misc.c
  aes/aes_ofb.c
  aes/aes_wrap.c
  aria/aria.c
  asn1/a_bitstr.c
  asn1/a_d2i_fp.c
  asn1/a_digest.c
  asn1/a_dup.c
  asn1/a_gentm.c
  asn1/a_i2d_fp.c
  asn1/a_int.c
  asn1/a_mbstr.c
  asn1/a_object.c
  asn1/a_octet.c
  asn1/a_print.c
  asn1/a_sign.c
  asn1/a_strex.c
  asn1/a_strnid.c
  asn1/a_time.c
  asn1/a_type.c
  asn1/a_utctm.c
  asn1/a_utf8.c
  asn1/a_verify.c
  asn1/ameth_lib.c
  asn1/asn1_err.c
  asn1/asn1_gen.c
  asn1/asn1_item_list.c
  asn1/asn1_lib.c
  asn1/asn1_parse.c
  asn1/asn_mime.c
  asn1/asn_moid.c
  asn1/asn_mstbl.c
  asn1/asn_pack.c
  asn1/bio_asn1.c
  asn1/bio_ndef.c
  asn1/d2i_param.c
  asn1/d2i_pr.c
  asn1/d2i_pu.c
  asn1/evp_asn1.c
  asn1/f_int.c
  asn1/f_string.c
  asn1/i2d_evp.c
  asn1/n_pkey.c
  asn1/nsseq.c
  asn1/p5_pbe.c
  asn1/p5_pbev2.c
  asn1/p5_scrypt.c
  asn1/p8_pkey.c
  asn1/t_bitst.c
  asn1/t_pkey.c
  asn1/t_spki.c
  asn1/tasn_dec.c
  asn1/tasn_enc.c
  asn1/tasn_fre.c
  asn1/tasn_new.c
  asn1/tasn_prn.c
  asn1/tasn_scn.c
  asn1/tasn_typ.c
  asn1/tasn_utl.c
  asn1/x_algor.c
  asn1/x_bignum.c
  asn1/x_info.c
  asn1/x_int64.c
  asn1/x_long.c
  asn1/x_pkey.c
  asn1/x_sig.c
  asn1/x_spki.c
  asn1/x_val.c
  async/arch/async_null.c
  async/arch/async_posix.c
  async/arch/async_win.c
  async/async.c
  async/async_err.c
  async/async_wait.c
  bf/bf_cfb64.c
  bf/bf_ecb.c
  bf/bf_enc.c
  bf/bf_ofb64.c
  bf/bf_skey.c
  bio/bf_buff.c
  bio/bf_lbuf.c
  bio/bf_nbio.c
  bio/bf_null.c
  bio/bf_prefix.c
  bio/bf_readbuff.c
  bio/bio_addr.c
  bio/bio_cb.c
  bio/bio_dump.c
  bio/bio_err.c
  bio/bio_lib.c
  bio/bio_meth.c
  bio/bio_print.c
  bio/bio_sock.c
  bio/bio_sock2.c
  bio/bss_acpt.c
  bio/bss_bio.c
  bio/bss_conn.c
  bio/bss_core.c
  bio/bss_dgram.c
  bio/bss_dgram_pair.c
  bio/bss_fd.c
  bio/bss_file.c
  bio/bss_log.c
  bio/bss_mem.c
  bio/bss_null.c
  bio/bss_sock.c
  bio/ossl_core_bio.c
  bn/bn_add.c
  bn/bn_asm.c
  bn/bn_blind.c
  bn/bn_const.c
  bn/bn_conv.c
  bn/bn_ctx.c
  bn/bn_depr.c
  bn/bn_dh.c
  bn/bn_div.c
  bn/bn_err.c
  bn/bn_exp.c
  bn/bn_exp2.c
  bn/bn_gcd.c
  bn/bn_gf2m.c
  bn/bn_intern.c
  bn/bn_kron.c
  bn/bn_lib.c
  bn/bn_mod.c
  bn/bn_mont.c
  bn/bn_mpi.c
  bn/bn_mul.c
  bn/bn_nist.c
  bn/bn_prime.c
  bn/bn_print.c
  bn/bn_rand.c
  bn/bn_recp.c
  bn/bn_rsa_fips186_4.c
  bn/bn_shift.c
  bn/bn_sqr.c
  bn/bn_sqrt.c
  bn/bn_srp.c
  bn/bn_word.c
  bn/bn_x931p.c
  bn/rsaz_exp.c
  bn/rsaz_exp_x2.c
  buffer/buf_err.c
  buffer/buffer.c
  camellia/cmll_cfb.c
  camellia/cmll_ctr.c
  camellia/cmll_ecb.c
  camellia/cmll_misc.c
  camellia/cmll_ofb.c
  cast/c_cfb64.c
  cast/c_ecb.c
  cast/c_enc.c
  cast/c_ofb64.c
  cast/c_skey.c
  cmac/cmac.c
  cmp/cmp_asn.c
  cmp/cmp_client.c
  cmp/cmp_ctx.c
  cmp/cmp_err.c
  cmp/cmp_hdr.c
  cmp/cmp_http.c
  cmp/cmp_msg.c
  cmp/cmp_protect.c
  cmp/cmp_server.c
  cmp/cmp_status.c
  cmp/cmp_util.c
  cmp/cmp_vfy.c
  cms/cms_asn1.c
  cms/cms_att.c
  cms/cms_cd.c
  cms/cms_dd.c
  cms/cms_dh.c
  cms/cms_ec.c
  cms/cms_enc.c
  cms/cms_env.c
  cms/cms_err.c
  cms/cms_ess.c
  cms/cms_io.c
  cms/cms_kari.c
  cms/cms_lib.c
  cms/cms_pwri.c
  cms/cms_rsa.c
  cms/cms_sd.c
  cms/cms_smime.c
  comp/c_brotli.c
  comp/c_zlib.c
  comp/c_zstd.c
  comp/comp_err.c
  comp/comp_lib.c
  conf/conf_api.c
  conf/conf_def.c
  conf/conf_err.c
  conf/conf_lib.c
  conf/conf_mall.c
  conf/conf_mod.c
  conf/conf_sap.c
  conf/conf_ssl.c
  crmf/crmf_asn.c
  crmf/crmf_err.c
  crmf/crmf_lib.c
  crmf/crmf_pbm.c
  ct/ct_b64.c
  ct/ct_err.c
  ct/ct_log.c
  ct/ct_oct.c
  ct/ct_policy.c
  ct/ct_prn.c
  ct/ct_sct.c
  ct/ct_sct_ctx.c
  ct/ct_vfy.c
  ct/ct_x509v3.c
  des/cbc_cksm.c
  des/cbc_enc.c
  des/cfb64ede.c
  des/cfb64enc.c
  des/cfb_enc.c
  des/des_enc.c
  des/ecb3_enc.c
  des/ecb_enc.c
  des/fcrypt.c
  des/fcrypt_b.c
  des/ofb64ede.c
  des/ofb64enc.c
  des/ofb_enc.c
  des/pcbc_enc.c
  des/qud_cksm.c
  des/rand_key.c
  des/set_key.c
  des/str2key.c
  des/xcbc_enc.c
  dh/dh_ameth.c
  dh/dh_asn1.c
  dh/dh_backend.c
  dh/dh_check.c
  dh/dh_depr.c
  dh/dh_err.c
  dh/dh_gen.c
  dh/dh_group_params.c
  dh/dh_kdf.c
  dh/dh_key.c
  dh/dh_lib.c
  dh/dh_meth.c
  dh/dh_pmeth.c
  dh/dh_prn.c
  dh/dh_rfc5114.c
  dsa/dsa_ameth.c
  dsa/dsa_asn1.c
  dsa/dsa_backend.c
  dsa/dsa_check.c
  dsa/dsa_depr.c
  dsa/dsa_err.c
  dsa/dsa_gen.c
  dsa/dsa_key.c
  dsa/dsa_lib.c
  dsa/dsa_meth.c
  dsa/dsa_ossl.c
  dsa/dsa_pmeth.c
  dsa/dsa_prn.c
  dsa/dsa_sign.c
  dsa/dsa_vrf.c
  dso/dso_dl.c
  dso/dso_dlfcn.c
  dso/dso_err.c
  dso/dso_lib.c
  dso/dso_openssl.c
  dso/dso_vms.c
  dso/dso_win32.c
  ec/curve448/arch_32/f_impl32.c
  ec/curve448/arch_64/f_impl64.c
  ec/curve448/curve448.c
  ec/curve448/curve448_tables.c
  ec/curve448/eddsa.c
  ec/curve448/f_generic.c
  ec/curve448/scalar.c
  ec/curve25519.c
  ec/ec2_oct.c
  ec/ec2_smpl.c
  ec/ec_ameth.c
  ec/ec_asn1.c
  ec/ec_backend.c
  ec/ec_check.c
  ec/ec_curve.c
  ec/ec_cvt.c
  ec/ec_deprecated.c
  ec/ec_err.c
  ec/ec_key.c
  ec/ec_kmeth.c
  ec/ec_lib.c
  ec/ec_mult.c
  ec/ec_oct.c
  ec/ec_pmeth.c
  ec/ec_print.c
  ec/ecdh_kdf.c
  ec/ecdh_ossl.c
  ec/ecdsa_ossl.c
  ec/ecdsa_sign.c
  ec/ecdsa_vrf.c
  ec/eck_prn.c
  ec/ecp_mont.c
  ec/ecp_nist.c
  ec/ecp_nistz256.c
  ec/ecp_oct.c
  ec/ecp_smpl.c
  ec/ecx_backend.c
  ec/ecx_key.c
  ec/ecx_meth.c
  encode_decode/decoder_err.c
  encode_decode/decoder_lib.c
  encode_decode/decoder_meth.c
  encode_decode/decoder_pkey.c
  encode_decode/encoder_err.c
  encode_decode/encoder_lib.c
  encode_decode/encoder_meth.c
  encode_decode/encoder_pkey.c
  engine/eng_all.c
  engine/eng_cnf.c
  engine/eng_ctrl.c
  engine/eng_dyn.c
  engine/eng_err.c
  engine/eng_fat.c
  engine/eng_init.c
  engine/eng_lib.c
  engine/eng_list.c
  engine/eng_openssl.c
  engine/eng_pkey.c
  engine/eng_rdrand.c
  engine/eng_table.c
  engine/tb_asnmth.c
  engine/tb_cipher.c
  engine/tb_dh.c
  engine/tb_digest.c
  engine/tb_dsa.c
  engine/tb_eckey.c
  engine/tb_pkmeth.c
  engine/tb_rand.c
  engine/tb_rsa.c
  err/err.c
  err/err_all.c
  err/err_all_legacy.c
  err/err_blocks.c
  err/err_mark.c
  err/err_prn.c
  ess/ess_asn1.c
  ess/ess_err.c
  ess/ess_lib.c
  evp/asymcipher.c
  evp/bio_b64.c
  evp/bio_enc.c
  evp/bio_md.c
  evp/bio_ok.c
  evp/c_allc.c
  evp/c_alld.c
  evp/cmeth_lib.c
  evp/ctrl_params_translate.c
  evp/dh_ctrl.c
  evp/dh_support.c
  evp/digest.c
  evp/dsa_ctrl.c
  evp/e_aes.c
  evp/e_aes_cbc_hmac_sha1.c
  evp/e_aes_cbc_hmac_sha256.c
  evp/e_aria.c
  evp/e_bf.c
  evp/e_camellia.c
  evp/e_cast.c
  evp/e_chacha20_poly1305.c
  evp/e_des.c
  evp/e_des3.c
  evp/e_idea.c
  evp/e_null.c
  evp/e_old.c
  evp/e_rc2.c
  evp/e_rc4.c
  evp/e_rc4_hmac_md5.c
  evp/e_rc5.c
  evp/e_seed.c
  evp/e_sm4.c
  evp/e_xcbc_d.c
  evp/ec_ctrl.c
  evp/ec_support.c
  evp/encode.c
  evp/evp_cnf.c
  evp/evp_enc.c
  evp/evp_err.c
  evp/evp_fetch.c
  evp/evp_key.c
  evp/evp_lib.c
  evp/evp_pbe.c
  evp/evp_pkey.c
  evp/evp_rand.c
  evp/evp_utils.c
  evp/exchange.c
  evp/kdf_lib.c
  evp/kdf_meth.c
  evp/kem.c
  evp/keymgmt_lib.c
  evp/keymgmt_meth.c
  evp/legacy_blake2.c
  evp/legacy_md4.c
  evp/legacy_md5.c
  evp/legacy_md5_sha1.c
  evp/legacy_mdc2.c
  evp/legacy_ripemd.c
  evp/legacy_sha.c
  evp/legacy_wp.c
  evp/m_null.c
  evp/m_sigver.c
  evp/mac_lib.c
  evp/mac_meth.c
  evp/names.c
  evp/p5_crpt.c
  evp/p5_crpt2.c
  evp/p_dec.c
  evp/p_enc.c
  evp/p_legacy.c
  evp/p_lib.c
  evp/p_open.c
  evp/p_seal.c
  evp/p_sign.c
  evp/p_verify.c
  evp/pbe_scrypt.c
  evp/pmeth_check.c
  evp/pmeth_gn.c
  evp/pmeth_lib.c
  evp/signature.c
  ffc/ffc_backend.c
  ffc/ffc_dh.c
  ffc/ffc_key_generate.c
  ffc/ffc_key_validate.c
  ffc/ffc_params.c
  ffc/ffc_params_generate.c
  ffc/ffc_params_validate.c
  hmac/hmac.c
  hpke/hpke_util.c
  http/http_client.c
  http/http_err.c
  http/http_lib.c
  idea/i_cbc.c
  idea/i_cfb64.c
  idea/i_ecb.c
  idea/i_ofb64.c
  idea/i_skey.c
  kdf/kdf_err.c
  lhash/lh_stats.c
  lhash/lhash.c
  asn1_dsa.c
  bsearch.c
  context.c
  core_algorithm.c
  core_fetch.c
  core_namemap.c
  cpt_err.c
  cpuid.c
  cryptlib.c
  ctype.c
  cversion.c
  der_writer.c
  dllmain.c
  ebcdic.c
  ex_data.c
  getenv.c
  info.c
  init.c
  initthread.c
  mem.c
  mem_sec.c
  o_dir.c
  o_fopen.c
  o_init.c
  o_str.c
  o_time.c
  packet.c
  param_build.c
  param_build_set.c
  params.c
  params_dup.c
  params_from_text.c
  passphrase.c
  provider.c
  provider_child.c
  provider_conf.c
  provider_core.c
  provider_predefined.c
  punycode.c
  quic_vlint.c
  self_test_core.c
  sleep.c
  sparse_array.c
  threads_lib.c
  threads_none.c
  threads_pthread.c
  threads_win.c
  time.c
  trace.c
  uid.c
  md4/md4_dgst.c
  md4/md4_one.c
  md5/md5_dgst.c
  md5/md5_one.c
  md5/md5_sha1.c
  mdc2/mdc2_one.c
  mdc2/mdc2dgst.c
  modes/cbc128.c
  modes/ccm128.c
  modes/cfb128.c
  modes/ctr128.c
  modes/cts128.c
  modes/gcm128.c
  modes/ocb128.c
  modes/ofb128.c
  modes/siv128.c
  modes/wrap128.c
  modes/xts128.c
  objects/o_names.c
  objects/obj_dat.c
  objects/obj_err.c
  objects/obj_lib.c
  objects/obj_xref.c
  ocsp/ocsp_asn.c
  ocsp/ocsp_cl.c
  ocsp/ocsp_err.c
  ocsp/ocsp_ext.c
  ocsp/ocsp_http.c
  ocsp/ocsp_lib.c
  ocsp/ocsp_prn.c
  ocsp/ocsp_srv.c
  ocsp/ocsp_vfy.c
  ocsp/v3_ocsp.c
  pem/pem_all.c
  pem/pem_err.c
  pem/pem_info.c
  pem/pem_lib.c
  pem/pem_oth.c
  pem/pem_pk8.c
  pem/pem_pkey.c
  pem/pem_sign.c
  pem/pem_x509.c
  pem/pem_xaux.c
  pem/pvkfmt.c
  pkcs12/p12_add.c
  pkcs12/p12_asn.c
  pkcs12/p12_attr.c
  pkcs12/p12_crpt.c
  pkcs12/p12_crt.c
  pkcs12/p12_decr.c
  pkcs12/p12_init.c
  pkcs12/p12_key.c
  pkcs12/p12_kiss.c
  pkcs12/p12_mutl.c
  pkcs12/p12_npas.c
  pkcs12/p12_p8d.c
  pkcs12/p12_p8e.c
  pkcs12/p12_sbag.c
  pkcs12/p12_utl.c
  pkcs12/pk12err.c
  pkcs7/bio_pk7.c
  pkcs7/pk7_asn1.c
  pkcs7/pk7_attr.c
  pkcs7/pk7_doit.c
  pkcs7/pk7_lib.c
  pkcs7/pk7_mime.c
  pkcs7/pk7_smime.c
  pkcs7/pkcs7err.c
  poly1305/poly1305.c
  property/defn_cache.c
  property/property.c
  property/property_err.c
  property/property_parse.c
  property/property_query.c
  property/property_string.c
  rand/prov_seed.c
  rand/rand_deprecated.c
  rand/rand_err.c
  rand/rand_lib.c
  rand/rand_meth.c
  rand/rand_pool.c
  rand/randfile.c
  rc2/rc2_cbc.c
  rc2/rc2_ecb.c
  rc2/rc2_skey.c
  rc2/rc2cfb64.c
  rc2/rc2ofb64.c
  ripemd/rmd_dgst.c
  ripemd/rmd_one.c
  rsa/rsa_ameth.c
  rsa/rsa_asn1.c
  rsa/rsa_backend.c
  rsa/rsa_chk.c
  rsa/rsa_crpt.c
  rsa/rsa_depr.c
  rsa/rsa_err.c
  rsa/rsa_gen.c
  rsa/rsa_lib.c
  rsa/rsa_meth.c
  rsa/rsa_mp.c
  rsa/rsa_mp_names.c
  rsa/rsa_none.c
  rsa/rsa_oaep.c
  rsa/rsa_ossl.c
  rsa/rsa_pk1.c
  rsa/rsa_pmeth.c
  rsa/rsa_prn.c
  rsa/rsa_pss.c
  rsa/rsa_saos.c
  rsa/rsa_schemes.c
  rsa/rsa_sign.c
  rsa/rsa_sp800_56b_check.c
  rsa/rsa_sp800_56b_gen.c
  rsa/rsa_x931.c
  rsa/rsa_x931g.c
  seed/seed.c
  seed/seed_cbc.c
  seed/seed_cfb.c
  seed/seed_ecb.c
  seed/seed_ofb.c
  sha/sha1_one.c
  sha/sha1dgst.c
  sha/sha256.c
  sha/sha3.c
  sha/sha512.c
  siphash/siphash.c
  sm2/sm2_crypt.c
  sm2/sm2_err.c
  sm2/sm2_key.c
  sm2/sm2_sign.c
  sm3/legacy_sm3.c
  sm3/sm3.c
  sm4/sm4.c
  srp/srp_lib.c
  srp/srp_vfy.c
  stack/stack.c
  store/store_err.c
  store/store_init.c
  store/store_lib.c
  store/store_meth.c
  store/store_register.c
  store/store_result.c
  store/store_strings.c
  thread/arch/thread_none.c
  thread/arch/thread_posix.c
  thread/arch/thread_win.c
  thread/api.c
  thread/arch.c
  thread/internal.c
  ts/ts_asn1.c
  ts/ts_conf.c
  ts/ts_err.c
  ts/ts_lib.c
  ts/ts_req_print.c
  ts/ts_req_utils.c
  ts/ts_rsp_print.c
  ts/ts_rsp_sign.c
  ts/ts_rsp_utils.c
  ts/ts_rsp_verify.c
  ts/ts_verify_ctx.c
  txt_db/txt_db.c
  ui/ui_err.c
  ui/ui_lib.c
  ui/ui_null.c
  ui/ui_openssl.c
  ui/ui_util.c
  whrlpool/wp_dgst.c
  x509/by_dir.c
  x509/by_file.c
  x509/by_store.c
  x509/pcy_cache.c
  x509/pcy_data.c
  x509/pcy_lib.c
  x509/pcy_map.c
  x509/pcy_node.c
  x509/pcy_tree.c
  x509/t_crl.c
  x509/t_req.c
  x509/t_x509.c
  x509/v3_addr.c
  x509/v3_admis.c
  x509/v3_akeya.c
  x509/v3_akid.c
  x509/v3_asid.c
  x509/v3_bcons.c
  x509/v3_bitst.c
  x509/v3_conf.c
  x509/v3_cpols.c
  x509/v3_crld.c
  x509/v3_enum.c
  x509/v3_extku.c
  x509/v3_genn.c
  x509/v3_ia5.c
  x509/v3_info.c
  x509/v3_int.c
  x509/v3_ist.c
  x509/v3_lib.c
  x509/v3_ncons.c
  x509/v3_pci.c
  x509/v3_pcia.c
  x509/v3_pcons.c
  x509/v3_pku.c
  x509/v3_pmaps.c
  x509/v3_prn.c
  x509/v3_purp.c
  x509/v3_san.c
  x509/v3_skid.c
  x509/v3_sxnet.c
  x509/v3_tlsf.c
  x509/v3_utf8.c
  x509/v3_utl.c
  x509/v3err.c
  x509/x509_att.c
  x509/x509_cmp.c
  x509/x509_d2.c
  x509/x509_def.c
  x509/x509_err.c
  x509/x509_ext.c
  x509/x509_lu.c
  x509/x509_meth.c
  x509/x509_obj.c
  x509/x509_r2x.c
  x509/x509_req.c
  x509/x509_set.c
  x509/x509_trust.c
  x509/x509_txt.c
  x509/x509_v3.c
  x509/x509_vfy.c
  x509/x509_vpm.c
  x509/x509cset.c
  x509/x509name.c
  x509/x509rset.c
  x509/x509spki.c
  x509/x509type.c
  x509/x_all.c
  x509/x_attrib.c
  x509/x_crl.c
  x509/x_exten.c
  x509/x_name.c
  x509/x_pubkey.c
  x509/x_req.c
  x509/x_x509.c
  x509/x_x509a.c
  ${OpenSSL_SOURCE_DIR}/ms/uplink.c
  ${OpenSSL_SOURCE_DIR}/providers/baseprov.c
  ${OpenSSL_SOURCE_DIR}/providers/defltprov.c
  ${OpenSSL_SOURCE_DIR}/providers/nullprov.c
  ${OpenSSL_SOURCE_DIR}/providers/prov_running.c)