add_library(default
    common/der/der_rsa_sig.c
    common/der/der_sm2_gen.c
    common/der/der_sm2_key.c
    common/der/der_sm2_sig.c
    common/bio_prov.c
    common/capabilities.c
    common/digest_to_nid.c
    common/provider_seeding.c
    common/provider_util.c
    common/securitycheck.c
    common/securitycheck_default.c
    implementations/asymciphers/rsa_enc.c
    implementations/asymciphers/sm2_enc.c
    implementations/ciphers/cipher_aes.c
    implementations/ciphers/cipher_aes_cbc_hmac_sha.c
    implementations/ciphers/cipher_aes_cbc_hmac_sha1_hw.c
    implementations/ciphers/cipher_aes_cbc_hmac_sha256_hw.c
    implementations/ciphers/cipher_aes_ccm.c
    implementations/ciphers/cipher_aes_ccm_hw.c
    implementations/ciphers/cipher_aes_gcm.c
    implementations/ciphers/cipher_aes_gcm_hw.c
    implementations/ciphers/cipher_aes_gcm_siv.c
    implementations/ciphers/cipher_aes_gcm_siv_hw.c
    implementations/ciphers/cipher_aes_gcm_siv_polyval.c
    implementations/ciphers/cipher_aes_hw.c
    implementations/ciphers/cipher_aes_ocb.c
    implementations/ciphers/cipher_aes_ocb_hw.c
    implementations/ciphers/cipher_aes_siv.c
    implementations/ciphers/cipher_aes_siv_hw.c
    implementations/ciphers/cipher_aes_wrp.c
    implementations/ciphers/cipher_aes_xts.c
    implementations/ciphers/cipher_aes_xts_fips.c
    implementations/ciphers/cipher_aes_xts_hw.c
    implementations/ciphers/cipher_aria.c
    implementations/ciphers/cipher_aria_ccm.c
    implementations/ciphers/cipher_aria_ccm_hw.c
    implementations/ciphers/cipher_aria_gcm.c
    implementations/ciphers/cipher_aria_gcm_hw.c
    implementations/ciphers/cipher_aria_hw.c
    implementations/ciphers/cipher_camellia.c
    implementations/ciphers/cipher_camellia_hw.c
    implementations/ciphers/cipher_chacha20.c
    implementations/ciphers/cipher_chacha20_hw.c
    implementations/ciphers/cipher_chacha20_poly1305.c
    implementations/ciphers/cipher_chacha20_poly1305_hw.c
    implementations/ciphers/cipher_cts.c
    implementations/ciphers/cipher_null.c
    implementations/ciphers/cipher_sm4.c
    implementations/ciphers/cipher_sm4_ccm.c
    implementations/ciphers/cipher_sm4_ccm_hw.c
    implementations/ciphers/cipher_sm4_gcm.c
    implementations/ciphers/cipher_sm4_gcm_hw.c
    implementations/ciphers/cipher_sm4_hw.c
    implementations/ciphers/cipher_tdes.c
    implementations/ciphers/cipher_tdes_common.c
    implementations/ciphers/cipher_tdes_default.c
    implementations/ciphers/cipher_tdes_default_hw.c
    implementations/ciphers/cipher_tdes_hw.c
    implementations/ciphers/cipher_tdes_wrap.c
    implementations/ciphers/cipher_tdes_wrap_hw.c
    implementations/digests/blake2_prov.c
    implementations/digests/blake2b_prov.c
    implementations/digests/blake2s_prov.c
    implementations/digests/md5_prov.c
    implementations/digests/md5_sha1_prov.c
    implementations/digests/null_prov.c
    implementations/digests/ripemd_prov.c
    implementations/digests/sha2_prov.c
    implementations/digests/sha3_prov.c
    implementations/digests/sm3_prov.c
    implementations/encode_decode/decode_der2key.c
    implementations/encode_decode/decode_epki2pki.c
    implementations/encode_decode/decode_msblob2key.c
    implementations/encode_decode/decode_pem2der.c
    implementations/encode_decode/decode_pvk2key.c
    implementations/encode_decode/decode_spki2typespki.c
    implementations/encode_decode/encode_key2any.c
    implementations/encode_decode/encode_key2blob.c
    implementations/encode_decode/encode_key2ms.c
    implementations/encode_decode/encode_key2text.c
    implementations/encode_decode/endecoder_common.c
    implementations/exchange/dh_exch.c
    implementations/exchange/ecdh_exch.c
    implementations/exchange/ecx_exch.c
    implementations/exchange/kdf_exch.c
    implementations/kdfs/hkdf.c
    implementations/kdfs/kbkdf.c
    implementations/kdfs/krb5kdf.c
    implementations/kdfs/pbkdf2.c
    implementations/kdfs/pbkdf2_fips.c
    implementations/kdfs/pkcs12kdf.c
    implementations/kdfs/scrypt.c
    implementations/kdfs/sshkdf.c
    implementations/kdfs/sskdf.c
    implementations/kdfs/tls1_prf.c
    implementations/kdfs/x942kdf.c
    implementations/kem/ec_kem.c
    implementations/kem/ecx_kem.c
    implementations/kem/kem_util.c
    implementations/kem/rsa_kem.c
    implementations/keymgmt/dh_kmgmt.c
    implementations/keymgmt/dsa_kmgmt.c
    implementations/keymgmt/ec_kmgmt.c
    implementations/keymgmt/ecx_kmgmt.c
    implementations/keymgmt/kdf_legacy_kmgmt.c
    implementations/keymgmt/mac_legacy_kmgmt.c
    implementations/keymgmt/rsa_kmgmt.c
    implementations/macs/blake2b_mac.c
    implementations/macs/blake2s_mac.c
    implementations/macs/cmac_prov.c
    implementations/macs/gmac_prov.c
    implementations/macs/hmac_prov.c
    implementations/macs/kmac_prov.c
    implementations/macs/poly1305_prov.c
    implementations/macs/siphash_prov.c
    implementations/rands/crngt.c
    implementations/rands/drbg.c
    implementations/rands/drbg_ctr.c
    implementations/rands/drbg_hash.c
    implementations/rands/drbg_hmac.c
    implementations/rands/seed_src.c
    implementations/rands/test_rng.c
    implementations/rands/seeding/rand_cpu_x86.c
    implementations/rands/seeding/rand_tsc.c
    implementations/rands/seeding/rand_unix.c
    implementations/rands/seeding/rand_win.c
    implementations/signature/dsa_sig.c
    implementations/signature/ecdsa_sig.c
    implementations/signature/eddsa_sig.c
    implementations/signature/mac_legacy_sig.c
    implementations/signature/rsa_sig.c
    implementations/signature/sm2_sig.c
    implementations/storemgmt/file_store.c
    implementations/storemgmt/file_store_any2obj.c
    implementations/storemgmt/winstore_store.c
    ${OpenSSL_SOURCE_DIR}/ssl/record/methods/ssl3_cbc.c)
target_link_libraries(default PRIVATE openssl_defaults)

add_library(common
    common/der/der_digests_gen.c
    common/der/der_dsa_gen.c
    common/der/der_dsa_key.c
    common/der/der_dsa_sig.c
    common/der/der_ec_gen.c
    common/der/der_ec_key.c
    common/der/der_ec_sig.c
    common/der/der_ecx_gen.c
    common/der/der_ecx_key.c
    common/der/der_rsa_gen.c
    common/der/der_rsa_key.c
    common/der/der_wrap_gen.c
    common/provider_ctx.c
    common/provider_err.c
    implementations/ciphers/ciphercommon.c
    implementations/ciphers/ciphercommon_block.c
    implementations/ciphers/ciphercommon_ccm.c
    implementations/ciphers/ciphercommon_ccm_hw.c
    implementations/ciphers/ciphercommon_gcm.c
    implementations/ciphers/ciphercommon_gcm_hw.c
    implementations/ciphers/ciphercommon_hw.c
    implementations/digests/digestcommon.c
    ${OpenSSL_SOURCE_DIR}/ssl/record/tls_pad.c)
target_link_libraries(common PRIVATE openssl_defaults)